# esp-ai

./: .gitattributes  .gitignore  .npmignore  COMMERCIAL_LICENSE.md  LICENSE  interface.md  loads_test.js  package-lock.json  package.json  plugins_develop.md  pre-version-log.md  readme.md  readme_english.md  readme_ja.md  readme_zh.md  version-log.md
.github/: FUNDING.yml
client/: client.ino  symlink.bat
client-idf/: readme.md
client-idf/Demo/: sdkconfig  sdkconfig.bz2  sdkconfig.old
client-idf/Demo/main/: CMakeLists.txt  Kconfig.projbuild  esp_32_s_3_pcm_ws.c  esp_32_s_3_pcm_ws.rar  https_request_example_main.c  idf_component.yml  main.c  play_baidu_speech_mp3_example.c  play_baidu_speech_mp3_example.h  play_sdcard_mp3_control_example.c  ws_echo_server.c
client-idf/Demo/main/WebSocket/: websocket_rx_handler.c  websocket_rx_handler.h
client-idf/VoiceInteractionFramework/: README_CN.md  sdkconfig  sdkconfig.old
client/esp-ai/: esp-ai - 快捷方式.lnk  esp-ai.cpp  esp-ai.h  keywords.txt  library.properties
example/: Dockerfile  example.ino  index.js  package.json  readme.md
fritzing/: esp32s3.fzz
pcb/: BOM_Board_ESP_AI_PCB_ESP_AI_2024-11-04.xlsx  BOM_Board_ESP_AI_PCB_ESP_AI_2024-12-05.xlsx  BOM_Board_ESP_AI_Sche_ESP_AI_2024-11-16.xlsx  PickAndPlace_PCB_ESP_AI_2024-11-04.xlsx  PickAndPlace_PCB_ESP_AI_2024-11-16.xlsx  PickAndPlace_PCB_ESP_AI_2024-12-05.xlsx
src/: config.js  index.d.ts  index.js  instance.js
src/audio_temp/: du.js  du.pcm  du2.pcm  du_cache.js  play_audio.js  play_temp.js  toPcm.bat
src/functions/: createUUID.js  getServerURL.js  (+1 more)
(+195 files in other folders)
